[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"



[project]
name = "ninja-api-key"
description = "Django Ninja API Key Authentication"
version = "1.0.0"
authors = [
  {name = "Lucas Rangel Cezimbra", email="lucas@cezimbra.tec.br"},
  {name = "Maximilian Wassink", email="wassink.maximilian@protonmail.com"},
]
readme = "README.md"
requires-python = ">=3.6.2"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["django", "rest", "ninja", "auth", "apikey"]
dependencies = [
    "django",
    "django-ninja"
]

[project.urls]
Source = "https://github.com/lucasrcezimbra/ninja-api-key"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
]



[tool.flit.module]
name = "ninja_apikey"


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
